# bughunter-cli

./: .gitignore  BRAINSTORM.md  CONTRIBUTING.md  README.md  ROADMAP.md  check_env.py  pyproject.toml  requirements.txt  security_policy.yaml
.github/workflows/: ci.yml  codeql.yml
ctf/reverse_engineering/: challenge.py
intelli-agent-framework/: README.md  __init__.py  main.py  pyproject.toml
intelli-agent-framework/core/: agent.py  comms.py  memory.py
intelli-agent-framework/examples/: customer_support_agent.yaml  research_assistant.py
intelli-agent-framework/ops/: Dockerfile
intelli-agent-framework/orchestrator/: deploy.py  scale_manager.py
intelli-agent-framework/tools/: registry.py
intelli-agent-framework/tools/builtins/: __init__.py
src/: main.py  tool_manager.py
src/bughunter_cli.egg-info/: PKG-INFO  SOURCES.txt
src/plugins/: gemini_ai.py
src/tools/: __init__.py  config.py  dirsearch.py  forecast.py  learn.py  map.py  nikto.py  nmap.py  nuclei.py  port_scanner.py  pullpush.py  refactor.py  sqlmap.py  subdomain_scanner.py  waybackurls.py
src/utils/: formatters.py  security.py  shell.py
tests/: benchmark.py  test_ai.py  test_security.py
user_dashboard/: handlers.py
wiki/: Command-Reference.md
