[tool.poetry]
packages = [{include = "."}]
name = "intelli-agent-framework"
version = "0.1.0"
description = "An open-source framework for creating and deploying intelligent agents."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.111.0"
langchain = "^0.2.5"
chromadb = "^0.5.3"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
redis = "^5.0.5"
pydantic = "^2.7.4"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
